# nsf-zerotier-tools

./: .gitignore  README.md  constraints.txt  default.nix  env.nix  release.nix  requirements.nix  requirements.txt  requirements_frozen.txt  setup.cfg  shell.nix  update_nix_requirements.sh  zerotier-client.py
.nix/: pinned-nixpkgs.nix
src/nixos_sf_zerotier_tools/: zerotier.py  zerotier_cli.py
src/nsf_zerotier_tools/: zerotier_cli.py
