[metadata]
name = nsf-zerotier-tools
description = Some zerotier admin tools to support nixos-secure-factory based projects
long-description = file: README.md
author = Mathieu Alexandre-Tétreault
author_email = alexandretm@amotus.ca
maintainer = Raymond Gauthier
maintainer_email = jraygauthier@gmail.com
license = 'Apache License 2.0'

platform = any

[options]
package_dir=
     =src
packages = find:

zip_safe = false
include_package_data = true
python_requires = >= 3.7
setup_requires =
    setuptools
    zerotier
    python-dateutil

install_requires =
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nsf-zerotier = nsf_zerotier_tools.zerotier_cli:cli
